--- a/src/components/bigChartBox/bigChartBox.scss
+++ b/src/components/bigChartBox/bigChartBox.scss
@@ -1,18 +1,19 @@
-@import '../../styles/variables.scss';
+@import "../../styles/responsive.scss";
 
 .bigChartBox{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  h1{
+    @include xxl{
+      font-size: 24px;
+    }
+  }
+  .chart{
     width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    h1{
-        font-size: 24px;
-    }
-
-    .chart{
-        width: 100%;
-        height: 300px;
-    }
+    height: 300px;
+  }
 }
