--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,3 +1,4 @@
+@import '../../styles/responsive.scss';
 .navbar{
     width: 100%;
     padding: 20px;
@@ -16,6 +17,12 @@
         display: flex;
         align-items: center;
         gap: 20px;
+
+        .icon{
+            @include sm{
+                display: none;
+            }
+        }
 
         .notification{
             position: relative;
